--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+@import url('../components/popup/popup.css');
+@import url('../components//header/header.css');
+@import url('../components/body/body.css');
+
 html {
   height: 100%;
 }
@@ -18,51 +22,8 @@ body {
   background-color: rgba(223, 223, 223, 0.651);
 }
 
-.header {
-  display: flex;
-  height: 50px;
-  background-color: rgb(255, 255, 255);
-  /* box-shadow: 1px 1px 0px 0px grey; */
-}
 
-.header__box {
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
 
-.header__box__label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  background-color: rgb(191, 122, 255);
-  color: aliceblue;
-  border-radius: 50px;
-  margin-left: 15px;
-}
-
-.header__box__search {
-  margin-left: 40px;
-}
-
-.header__box__search-input {
-  width: 500px;
-  height: 25px;
-  padding: 0px 15px;
-  color: rgb(206, 201, 201);
-}
-
-.body {
-  margin: 0px 50px;
-}
-
-.body__container {
-}
-
-.body__table {
-}
 
 table {
   table-layout: fixed;
@@ -115,116 +76,3 @@ th {
 .add-client__container__btn-text {
 }
 
-.popup__bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
-  opacity: 0; /* Скрываем фон и сам попап */
-  pointer-events: none; /* Запрещаем ему быть целью событий */
-  transition: 0.5s all;
-}
-
-.popup__bg.active {
-  /* При добавлении класса 'active' */
-  opacity: 1; /* Показываем фон и попап */
-  pointer-events: all; /* Возвращаем события */
-  transition: 0.5s all;
-}
-
-.popup {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0); /* Центрируем и масштабируем в 0 само окно */
-  background: #fff;
-  width: 400px;
-  padding: 25px;
-  transition: 0.5s all;
-  background-color: white;
-}
-
-.popup__del {
-  width: 500px;
-  align-items: center;
-}
-
-.popup__del__content {
-  width: 350px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.popup.active {
-  /* При добавлении класса 'active' */
-  transform: translate(-50%, -50%) scale(1); /* Так же центрируем и плавно увеличиваем */
-  transition: 0.5s all;
-}
-
-.popup__title {
-  display: flex;
-  align-items: center;
-}
-
-.popup__title__text {
-  font-size: 22px;
-  font-weight: 600;
-  padding-right: 20px;
-}
-
-.popup__title__id {
-  color: rgb(206, 201, 201);
-  font-size: 14px;
-}
-
-.close-popup {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  padding: 10px;
-  cursor: pointer;
-  color: rgb(206, 201, 201);
-}
-
-.popup-form {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 15px;
-}
-
-.popup-form__label {
-  font-size: 12px;
-  padding: 15px 0px 5px 0px;
-  color: rgb(206, 201, 201);
-}
-
-.popup-form__input {
-  font-size: 20px;
-  border: none;
-  border-bottom: 1px solid rgb(206, 201, 201);
-}
-
-.popup__btn__add-person {
-  margin-bottom: 25px;
-}
-
-.popup__btn__save {
-  width: 130px;
-  height: 40px;
-  color: white;
-  border: none;
-  cursor: pointer;
-  background-color: rgb(191, 122, 255);
-  margin-bottom: 10px;
-}
-
-.popup__footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
