--- a/components/popup/popup.css
+++ b/components/popup/popup.css
@@ -92,10 +92,40 @@
   border-bottom: 1px solid rgb(206, 201, 201);
 }
 
+/* КОНТЕЙНЕР ДЛЯ ДОБАВЛЕНИЯ КОНТАКТОВ И СОХРАНЕНИЯ ПОЛЬЗОВАТЕЛЯ */
+.popup__footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* КНОПКА ДОБАВИТЬ КОНТАКТ */
 .popup__btn__add-person {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--bg-grey);
+  width: calc(100% + 50px);
+  min-height: 35px;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 25px;
 }
 
+.btn__addcontact {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 100%;
+
+}
+
+.btn__addcontact  > * {
+  margin-right: 5px;
+}
+
+/* КНОПКА СОХРАНИТЬ НОВОГО ПОЛЬЗОВАТЕЛЯ */
 .popup__btn__save {
   width: 130px;
   height: 40px;
@@ -106,8 +136,3 @@
   margin-bottom: 10px;
 }
 
-.popup__footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
