--- a/components/ui/addContact/addContact.module.css
+++ b/components/ui/addContact/addContact.module.css
@@ -1,20 +1,20 @@
-.container {
+.addContact {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  /* width: calc(100% + 50px); */
-  width: 100%;
+  width: calc(100% + 20px);
+  /* width: 100%; */
   min-height: 35px;
 
   background-color: var(--bg-grey);
-
   margin: 25px 0px;
+  padding: 15px;
   cursor: pointer;
 }
 
-.container > * {
+.btn > * {
   margin-right: 5px;
 }
 
@@ -24,4 +24,12 @@
 
 .text {
 
+}
+
+.btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  
 }
